# CPU-simu

./: .gitignore  README.md  commands.yml  main.py  pyproject.toml
.github/workflows/: build-exe.yml
ROM/: ROM.txt
databases/: RCXL(v1).json
modules/: dataframe.py  initialize.py  read_rom.py  run.py
tools/: file_manager.py  search_command.py
